@@ -1,8 +1,8 @@
 Package: rcicr
 Type: Package
 Title: Reverse-Correlation Image-Classification Toolbox
-Version: 0.3.2
-Date: 2015-07-20
+Version: 0.3.2.1
+Date: 2015-10-08
 URL: http://ron.dotsch.org/rcicr
 Author: Ron Dotsch <rdotsch@gmail.com>
 Maintainer: Ron Dotsch <rdotsch@gmail.com>
@@ -11,8 +11,8 @@ License: GPL-2
 Imports: matlab, aspace, jpeg, dplyr
 Repository: CRAN
 Repository/R-Forge/Project: rcicr
-Repository/R-Forge/Revision: 37
-Repository/R-Forge/DateTimeStamp: 2015-07-20 12:13:26
-Date/Publication: 2015-07-20 18:19:54
+Repository/R-Forge/Revision: 39
+Repository/R-Forge/DateTimeStamp: 2015-10-08 19:33:40
+Date/Publication: 2016-02-05 19:32:11
 NeedsCompilation: no
-Packaged: 2015-07-20 12:25:10 UTC; rforge
+Packaged: 2015-10-08 19:45:24 UTC; rforge
